# VulnKit

./: .gitignore  API.MD  README.MD  app_log.txt  mt_log.txt  reverse_shell_31317  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/androidTest/java/org/dpdns/sqxy090123/kit/vulnkit/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  cpp - 快捷方式.lnk
app/src/main/aidl/org/dpdns/sqxy090123/kit/vulnkit/: IPhysLeak.aidl  IVulnService.aidl
app/src/main/assets/: leak_phys
app/src/main/cpp/: CMakeLists.txt  leak_phys.c  native-lib.cpp  root_shell.c  root_shell.h
app/src/main/cpp/exploits/: cve_2019_2215.c  cve_2022_22057.c  cve_2023_20938.c  cve_2024_31317.c  cve_2024_43066.c  cve_2024_43093_helper.c  cve_2024_53104.c  cve_2025_0088.c  cve_2025_20801.c  cve_2025_21479.c  cve_2025_36920.c  cve_2025_36929.c  cve_2025_38352.c  cve_2025_48543.c  cve_2025_48567.c  cve_2025_48572_helper.c  cve_2025_54642.c  cve_2025_64312.c  cve_2026_0027.c  cve_2026_0032.c  cve_2026_0038.c  cve_2026_0107.c  cve_2026_0107_helper.c  cve_2026_21385.c
app/src/main/cpp/include/: exploits.h  gpu_physical_mem.c  gpu_physical_mem.h
app/src/main/java/org/dpdns/sqxy090123/kit/vulnkit/: AdminReceiver.java  AppInstallerActivity.java  AuthHelper.java  BootReceiver.java  DeviceInfoActivity.java  Diagnose.java  EnvironmentScoreActivity.java  EnvironmentSniffer.java  ExploitConfig.java  ExploitExecutor.java  ExploitManager.java  InternalFileProvider.java  JNIInterface.java  MainActivity.java  MalwareScanner.java  PermissionManagerActivity.java  PhysLeakService.java  ShizukuAuthActivity.java  ShizukuHelper.java  SystemDiagnoseActivity.java  TerminalView.java  UninstallRetentionActivity.java  VulnService.java  VulnUserService.java  VulnerabilityAdapter.java  VulnerabilityItem.java  VulnerabilityListActivity.java
app/src/main/java/org/dpdns/sqxy090123/kit/vulnkit/exploits/: CVE_2019_2215.java  CVE_2020_29374.java  CVE_2021_0340.java  CVE_2022_20347.java  CVE_2022_20360.java  CVE_2022_22057.java  CVE_2023_20913.java  CVE_2023_20938.java  CVE_2024_0044.java  CVE_2024_31317.java  CVE_2024_32996.java  CVE_2024_43066.java  CVE_2024_43093.java  CVE_2024_53104.java  CVE_2025_0088.java  (+28 more)
app/src/main/res/anim/: fade_in.xml  fade_out.xml
app/src/main/res/drawable/: badge_background.xml  dialog_bg.xml  ic_app_icon.xml  ic_launcher_background.xml  ic_loading.xml  splash_background.xml  tag_bg.xml
app/src/main/res/layout/: activity_app_installer.xml  activity_device_info.xml  activity_env_score.xml  activity_main.xml  activity_permission_manager.xml  activity_shizuku_auth.xml  activity_system_diagnose.xml  activity_vulnerability_list.xml  dialog_loading.xml  dialog_manual_input.xml  item_permission_child.xml  item_permission_group.xml  item_vulnerability.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/xml/: device_admin.xml  file_paths.xml  shortcuts.xml
app/src/test/java/org/dpdns/sqxy090123/kit/vulnkit/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
